# bottle-cap-detection

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Dockerfile.gpu  README.md  pyproject.toml  settings.yaml
.github/workflows/: ci.yml
bsort/: __init__.py  augment.py  cli.py  config.py  export.py  infer.py  infer_houghcircle.py  sanity_check.py  train.py
run_bsort/train/: args.yaml
sample/: data.yaml
sample/train/: labels.cache
sample/train/labels/: raw-250110_dc_s001_b2_15_aug1.txt  raw-250110_dc_s001_b2_15_aug2.txt  raw-250110_dc_s001_b2_15_aug3.txt  raw-250110_dc_s001_b2_15_aug4.txt  raw-250110_dc_s001_b2_15_aug5.txt  raw-250110_dc_s001_b2_1_aug1.txt  raw-250110_dc_s001_b2_1_aug2.txt  raw-250110_dc_s001_b2_1_aug3.txt  raw-250110_dc_s001_b2_1_aug4.txt  raw-250110_dc_s001_b2_1_aug5.txt  raw-250110_dc_s001_b2_3_aug1.txt  raw-250110_dc_s001_b2_3_aug2.txt  raw-250110_dc_s001_b2_3_aug4.txt  raw-250110_dc_s001_b2_3_aug5.txt  raw-250110_dc_s001_b3_2_aug1.txt  raw-250110_dc_s001_b3_2_aug3.txt  raw-250110_dc_s001_b3_2_aug4.txt  raw-250110_dc_s001_b3_2_aug5.txt  raw-250110_dc_s001_b3_3_aug1.txt  raw-250110_dc_s001_b3_3_aug2.txt  raw-250110_dc_s001_b3_3_aug3.txt  raw-250110_dc_s001_b3_3_aug4.txt  raw-250110_dc_s001_b3_3_aug5.txt  raw-250110_dc_s001_b3_4_aug1.txt  raw-250110_dc_s001_b3_4_aug2.txt  raw-250110_dc_s001_b3_4_aug3.txt  raw-250110_dc_s001_b3_4_aug4.txt  raw-250110_dc_s001_b4_1_aug1.txt  raw-250110_dc_s001_b4_1_aug2.txt  raw-250110_dc_s001_b4_1_aug3.txt  raw-250110_dc_s001_b4_1_aug4.txt  raw-250110_dc_s001_b4_1_aug5.txt  raw-250110_dc_s001_b4_2_aug1.txt  raw-250110_dc_s001_b4_2_aug2.txt  raw-250110_dc_s001_b4_2_aug3.txt  raw-250110_dc_s001_b4_2_aug4.txt  raw-250110_dc_s001_b4_2_aug5.txt  raw-250110_dc_s001_b4_3_aug1.txt  raw-250110_dc_s001_b4_3_aug2.txt  raw-250110_dc_s001_b4_3_aug3.txt  (+16 more)
sample/val/: labels.cache
tests/: conftest.py  test_config.py  test_export.py  test_infer.py
